[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywhatsweb"
version = "0.1.0"
description = "Biblioteca Python para automação do WhatsApp Web baseada no whatsapp-web.js"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TI Léo Team", email = "ti.leo@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.0.0",
    "webdriver-manager>=3.8.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "qrcode>=7.3.0",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/llongaray/pywhatsweb"
Repository = "https://github.com/llongaray/pywhatsweb"
Issues = "https://github.com/llongaray/pywhatsweb/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pywhatsweb*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
